prevent the back/forward buttons from flickering.  noticed that the forward button is no longer being lit up though

--- a/src/skin/overlay.css
+++ b/src/skin/overlay.css
@@ -5,11 +5,12 @@
   -moz-box-align: center;
 }
 
-.mininav button image {
+#navbuttons button image {
   display: none;
 }
 
-.mininav button {
+#navbuttons button,
+#navbuttons button[disabled="false"] {
   -moz-appearance: none;
   border: 1px solid transparent;
   color: #000;
@@ -24,38 +25,34 @@
   min-width: 0;
   -moz-border-radius: 3px;
 }
-.mininav button[disabled='true'] {
+
+#navbuttons button[disabled="true"] {
   color: #707070;
   cursor: default;
   text-shadow: 0px 1px 0 #e0e0e0;
 }
 
-.mininav button:hover {
+#navbuttons button[disabled="false"]:hover {
   background-image: -moz-linear-gradient(center top , #ebebeb 0%, #d1d1d1 100%);
   -moz-box-shadow:0 0 1px #eee inset, 0 1px 0 #d6d6d6;
   border-color: #bbb;
 }
-.mininav button[disabled="true"]:hover {
-  background-image: none;
-  border-color: transparent;
-  -moz-box-shadow: none;
-}
 
-.mininav button:active {
+#navbuttons button[disabled="false"]:active {
   background-image: -moz-linear-gradient(center top , #7c7c7c 0%, #919191 100%);
   border-color: #767676;
   -moz-box-shadow: none;
 }
 
-.mininav button[disabled="true"]:hover label {
+#navbuttons button[disabled="true"]:hover label {
   text-decoration: none;
 }
 
-.mininav button.back {
+#navbuttons button.back {
   padding: 0 8px 4px 4px;
 }
 
-.mininav button.forward {
+#navbuttons button.forward {
   padding: 0 6px 4px 6px;
 }
 
